# Tensor-Networks-Simple-Update

./: .gitignore  .gitignore.rtf  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  Quantum_Ising_Model_Phase_Transition.ipynb  README.md  Triangular_2d_lattice_BLBQ_Spin_1_simulation.ipynb  random_peps_simulation.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  univeral_tensor_network_paper__reconstruction.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
notebooks/: AFH_peps_state.ipynb  Quantum_Ising_Model_Phase_Transition.ipynb  Triangular_2d_lattice_BLBQ_Spin_1_simulation.ipynb  ipeps_energy_simulations.ipynb
scripts/: load_tensor_network_state.py  peps_simple_update_simulation.py  peps_simulation.py
src/: SimpleUpdate.py  TensorNetwork.py  examples.py  main.py  simple_update.py  structure_matrix_constructor.py  structure_matrix_generator.py  tensor_network.py  utils.py
src/networks/: AFH_10x10_obc_D_4.pkl
src/tnsu/: examples.py  math_objects.py  simple_update.py  structure_matrix_constructor.py  tensor_network.py  utils.py
tests/: test_all.py  test_main.py
tmp/networks/: AFH_12x12_obc_D_4.pkl  AFH_2x2_pbc_D_4.pkl  AFH_2x2_pbc_D_6.pkl  AFH_4x4_obc_D_4.pkl  AFH_4x4_pbc_D_3.pkl  random_peps1.pkl
