[metadata]
name = tensor_networks_simple_update
version = 0.0.1
author = Roy Elkabetz
author_email = elkabetzroy@gmail.com
description = A package for Tensor-Networks Simple-Update simulations of quantum wave functions representations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RoyElkabetz/Tensor-Networks-Simple-Update
keywords = Tensor-Networks, Simple-Update, Quantum-Information
classifiers =
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.5
    matplotlib>=3.2.0
    scipy>=1.6.2

[options.package_data]
src = networks/*

[options.packages.find]
exclude =
    assets
    notebooks
    tests
    theory
    tmp

[options.extras_require]
dev = pytest