[metadata]
name = tnsu
version = 0.0.1
author = Roy Elkabetz
author_email = elkabetzroy@gmail.com
description = A package for Tensor-Networks Simple-Update simulations of quantum wave functions representations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RoyElkabetz/Tensor-Networks-Simple-Update
keywords = Tensor-Networks, Simple-Update, Quantum-Information
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    numpy
    scipy

[options.packages.find]
where=src

[options.package_data]
tnsu = networks/*.pkl

[options.extras_require]
dev = pytest